# ironclad

./: .gitignore  Cargo.toml  README.md
src/: aont.rs  block_store.rs  chunk_format.rs  erasure.rs  integrity.rs  io_guard.rs  key_material.rs  lib.rs  main.rs  manifest_recovery.rs
tests/: cli.rs  incremental_io.rs  resilience.rs
